--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
         <div class="row6col4 input"></div>
         <div class="row6col5 input"></div>
     </div>
-    
+    <div id="overlay"></div>
+    <div class="modal" id="modal-win">
+        <h1>Congratulations</h1>
+        <p>You have won!</p>
+        <button data-close-button class="play-again-button">Play again</button>
+    </div>
+    <div class="modal" id="modal-lose">
+        <h1>You tried your best!</h1>
+        <p class="correct-word"></p>
+        <button data-close-button class="play-again-button">Play again</button>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
